--- a/hasse.cabal
+++ b/hasse.cabal
@@ -1,14 +1,8 @@
 name:                hasse
 version:             0.1.0.0
--- synopsis:
--- description:
 homepage:            https://github.com/githubuser/hasse#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Matthew Piziak
+category:            Math
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
