--- a/hasse.cabal
+++ b/hasse.cabal
@@ -27,6 +27,7 @@ executable hasse-exe
                , colour
                , diagrams-lib
                , diagrams-svg
+               , diagrams-contrib
                , split
   default-language: Haskell2010
 
